src/App.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #1c2242;
  font-family: "Inter", sans-serif;
}

.main {
  position: relative;
  width: 100%;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.container {
  position: relative;
  background-color: #f5f7fb;
  width: 100%;
  max-width: 1024px;
  min-height: 100%;
  display: flex;
  padding: 50px 15px;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.right-blob {
  position: absolute;
  right: 0;
  top: 0;
}

.left-blob {
  position: absolute;
  left: 0;
  bottom: 0;
}

.title {
  color: #293264;
  font-family: "Karla", sans-serif;
  font-size: 40px;
  font-weight: 700;
  margin-bottom: 30px;
}

.start-quiz {
  font-family: "Inter", sans-serif;
  font-weight: 550;
  font-size: 18px;
  width: 193px;
  height: 52px;
  border-radius: 15px;
  color: #f5f7fb;
  background-color: #4d5b9e;
  outline: none;
  border: none;
}

.questions-container {
  z-index: 99;
}

.question {
  margin-bottom: 15px;
}

.question-title {
  margin-bottom: 10px;
  color: #293264;
  font-family: "Karla", sans-serif;
  font-size: 18px;
}

.question-options {
  margin-bottom: 15px;
  display: flex;
  flex-direction: column;
  max-width: 50%;
  gap: 12px;
}

.option {
  width: auto;
  padding-inline: 10px;
  min-height: 21px;
  border-radius: 8px;
  color: #293264;
  font-family: "Inter", sans-serif;
  border: 1px solid #293264;
  font-size: 13px;
  cursor: pointer;
}

.score-board {
  display: flex;
  margin: 0 auto;
  gap: 20px;
  justify-content: center;
  align-items: center;
  z-index: 99;
}

.score-text {
  font-size: 13px;
  font-weight: 600;
  color: #293264;
}

.score-btn {
  height: 30px;
  outline: none;
  border: none;
  border-radius: 10px;
  color: #f5f7fb;
  padding-inline: 20px;
  background-color: #4d5b9e;
}

@media (min-width: 550px) {
  .container {
    min-height: 550px;
  }
  .question-options {
    flex-direction: row;
  }
}

